Fix Java error